--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,8 +9,8 @@ on:
         default: "thdwoqor"
   repository_dispatch:
     types: [build-event]
-  schedule:
-    - cron: '0 6 * * *'
+#   schedule:
+#     - cron: '0 6 * * *'
     
 jobs:
   build:
